      order can now be customised using the Views module.
    * Added additional features to the default install profile, and implemented
      a "slimmed down" install profile designed for developers.
    * Image toolkits are now provided by modules (rather than requiring a manual
      file copy to the includes directory).
    * Added an edit tab to taxonomy term pages.
- News aggregator:
    * Added OPML import functionality for RSS feeds.
    * Optionally, RSS feeds may be configured to not automatically generate feed blocks.
- Search:
    * Added support for language-aware searches.
- Testing:
    * Added test framework and tests.
- Removed ping module:
    * Contributed modules with similar functionality are available.
- Refactored the "access rules" component of user module:
    * The user module now provides a simple interface for blocking single
      IP addresses. The previous functionality in the user module for restricting
      certain e-mail addresses and usernames is now available as a contributed module.
      Further, IP address range blocking is no longer supported and should be
      implemented at the operating system level.
- Removed throttle module:
    * Alternative methods for improving performance are available in other core and
      contributed modules.
- Added code registry:
    * Using the registry, modules declare their includable files via their .info file,
      allowing Drupal to lazy-load code as needed, resulting in significant performance
      and memory improvements.
- Theme system:
    * Converted the 'bluemarine' theme to a tableless layout.
- File handling:
    * Files are now first class Drupal objects with file_load(), file_save(),
      and file_validate() functions and corresponding hooks.
    * The file_move(), file_copy() and file_delete() functions now operate on
      file objects and invoke file hooks so that modules are notified and can
      respond to changes.